--- a/my-hood-devslopes/Base.lproj/LaunchScreen.storyboard
+++ b/my-hood-devslopes/Base.lproj/LaunchScreen.storyboard
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8150" systemVersion="15A204g" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10089" systemVersion="15E56a" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8122"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10072.1"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -15,8 +16,48 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <animations/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FYw-S6-BdR">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="bannerlogo" translatesAutoresizingMaskIntoConstraints="NO" id="u1e-8l-h1v">
+                                        <rect key="frame" x="180" y="248" width="240" height="103"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="240" id="1mq-7A-L4i"/>
+                                            <constraint firstAttribute="width" constant="240" id="Blq-0Z-PDc"/>
+                                        </constraints>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" red="0.18039215689999999" green="0.52941176469999995" blue="0.76470588240000004" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="u1e-8l-h1v" secondAttribute="trailing" constant="180" id="8B6-dk-A3z"/>
+                                    <constraint firstItem="u1e-8l-h1v" firstAttribute="top" secondItem="FYw-S6-BdR" secondAttribute="top" constant="180" id="AwF-f5-oRa"/>
+                                    <constraint firstAttribute="bottom" secondItem="u1e-8l-h1v" secondAttribute="bottom" constant="180" id="QS0-Mc-pRB"/>
+                                    <constraint firstItem="u1e-8l-h1v" firstAttribute="leading" secondItem="FYw-S6-BdR" secondAttribute="leading" constant="180" id="d1k-Cv-RYD"/>
+                                    <constraint firstItem="u1e-8l-h1v" firstAttribute="centerX" secondItem="FYw-S6-BdR" secondAttribute="centerX" id="geZ-b6-AKw"/>
+                                    <constraint firstItem="u1e-8l-h1v" firstAttribute="centerY" secondItem="FYw-S6-BdR" secondAttribute="centerY" id="mfr-wK-H8f"/>
+                                    <constraint firstItem="u1e-8l-h1v" firstAttribute="top" secondItem="FYw-S6-BdR" secondAttribute="top" constant="180" id="w0g-Eq-Q8F"/>
+                                    <constraint firstAttribute="bottom" secondItem="u1e-8l-h1v" secondAttribute="bottom" constant="180" id="whh-lC-S7B"/>
+                                </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="8B6-dk-A3z"/>
+                                        <exclude reference="AwF-f5-oRa"/>
+                                        <exclude reference="QS0-Mc-pRB"/>
+                                        <exclude reference="d1k-Cv-RYD"/>
+                                        <exclude reference="w0g-Eq-Q8F"/>
+                                        <exclude reference="whh-lC-S7B"/>
+                                    </mask>
+                                </variation>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="FYw-S6-BdR" secondAttribute="trailing" id="4Uw-gY-JcI"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="FYw-S6-BdR" secondAttribute="bottom" id="EqL-29-nna"/>
+                            <constraint firstItem="FYw-S6-BdR" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="L7x-CX-dGV"/>
+                            <constraint firstItem="FYw-S6-BdR" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="gfO-kP-noK"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -24,4 +65,7 @@
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="bannerlogo" width="518" height="194"/>
+    </resources>
 </document>
